--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,4 @@
-<% provide :title, (t ".about_title") %>
+<% provide :title, t(".about_title") %>
 <h1><%= t ".heading" %></h1>
 <p>
   <%= t ".detail_1" %>
