--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,24 @@
 <% provide :title, t(".signup_title") %>
 <h1><%= t ".heading" %></h1>
-<p><%= t ".description_title" %></p>
+<!-- <p><%= t ".description_title" %></p> -->
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for(@user) do |f| %>
+      <%= render "shared/error_messages" %>
+
+      <%= f.label t ".name" %>
+      <%= f.text_field :name, class: "form-control" %>
+
+      <%= f.label t ".email" %>
+      <%= f.email_field :email, class: "form-control" %>
+
+      <%= f.label t ".password" %>
+      <%= f.password_field :password, class: "form-control" %>
+
+      <%= f.label t ".confirmation" %>
+      <%= f.password_field :password_confirmation, class: "form-control" %>
+
+      <%= f.submit t(".Fcreate"), class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
