--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
         <li><%= link_to t(".home_header"), root_path %></li>
         <li><%= link_to t(".help_header"), help_path %></li>
         <% if logged_in? %>
-          <li><%= link_to t("users_detail"), "#" %></li>
+          <li><%= link_to t("users_detail"), users_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <%= current_user.name %>
@@ -14,7 +14,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><%= link_to t(".profile"), current_user %></li>
-              <li><%= link_to t(".setting"), '#' %></li>
+              <li><%= link_to t(".setting"), edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li> <%= link_to t(".logout_header"), logout_path, method: :delete %></li>
             </ul>
