--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -4,7 +4,7 @@
   <%= t ".detail_1" %>
   <%= link_to t("ruby_on_rails_tut"), Settings.links.rails_tutorial.home_page %>
   <%= t ".detail_2" %>
-  <%= link_to t("learn_enough"), Settings.links.learn_enough %>
+  <%= link_to t(".learn_enough"), Settings.links.learn_enough %>
   <%= t ".detail_3" %>
   <%= link_to t("ruby_on_rails"), Settings.links.rails_tutorial.home_page %>.
   <%= t ".description_title" %>
