--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,3 +1,5 @@
-<h1><%= t ".title" %></h1>
-<p><%= t ".greeting" %> <%= @user.name %>,</p>
-<p><%= t ".click" %></p>
+<h1><%= t "shared.password_reset" %></h1>
+<p><%= t "shared.link_blow" %></p>
+<%= link_to t("shared.password_reset"), edit_password_reset_url(id: @user.reset_token, email: @user.email) %>
+<p><%= t "shared.expire_in" %></p>
+<p><%= t "shared.if_you_did_not_request" %></p>
