--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,2 +1,4 @@
-<%= t ".greeting" %> <%= @user.name %>,
-<%= t ".click" %>
+<%= t "shared.link_blow" %>
+<%= edit_password_reset_url id: @user.reset_token, email: @user.email %>
+<%= t "shared.expire_in" %>
+<%= t "shared.if_you_did_not_request" %>
